blocks/cards/cards.css
/* ... */
.cards.gradient-shadow .cards-card-image {
  background: linear-gradient(135deg,#d41f9c,#ffa78c);
  height: 38px;
  width: 38px;
  margin-left: 16px;
}

.cards.gradient-shadow .cards-card-body {
  font-family: var(--body-font-family);
  font-size: 16px;
  font-weight: 400;
  letter-spacing: 0.5px;
  line-height: 20px;
  display: block;
  margin-bottom: 0;
}

.cards.gradient-shadow .button-container > a {
  font-family: var(--fixed-font-family);
  font-size: 1.4rem;
  font-weight: 600;
  text-decoration: none;
  line-height: 2rem;
  background-color: #fff;
  color: #000;
  padding: 0;
  border-radius: 0;
  border: unset;
  margin-bottom: 0;
  height: auto;
}

.cards.gradient-shadow .button-container {
  padding: 0;
  display: flex;
  width: 100%;
  flex-wrap: wrap;
}

.cards.gradient-shadow .button-container > a::after {
  background-color: #000;
  display: block;
  content: "";
  height: 0.2rem;
}

.cards.gradient-shadow > ul > li img {
  aspect-ratio: auto;
  object-fit: cover;
  width: 38px;
  height:38px;
}

.cards-container.icon-panel .cards > ul {
  list-style: none;
  display: flex;
  flex-flow: row wrap;
  gap: 0;
}

.cards-container.icon-panel .cards > ul > li {
  border: none;
  max-width: 450px;
  flex: 0 0 100%;
}

@media (min-width: 600px) {
  .cards-container.icon-panel .cards > ul > li {
    flex: 0 0 50%;
  }
}

@media (min-width: 900px) {
  .cards-container.icon-panel .cards > ul > li {
  flex: 1 1 0;
  }
}

.cards-container.icon-panel .cards > ul > li img {
  aspect-ratio: 1;
}

/* Styling for the 2up info card variant */

  /* Styling for top level container for the 2up style of card (Flex container) */
  .cards.info-card > ul {
    display: flex;
    flex-wrap: wrap;
    padding-inline-start: 0;
    grid-gap: 0;
    margin-left: -20px;
    margin-right: -20px;
  }

  /* Styling for top level container for each card (flex item) */
  .cards.info-card > ul > li {
    border: 0;
    flex: 0 0 100%;
    max-width: 100%;
    box-sizing: border-box;
  }

  /* Add a margin to the first child since in narrow mode this is a single column */
  .cards.info-card > ul > li:first-child {
    margin-bottom: 5rem;
  }

  /* Div to contain the card elements */
  .cards.info-card .card-container {
    padding-left: 20px;
    padding-right: 20px;
    cursor: pointer;
    display: flex;
    flex-direction: column;
    height: 100%;
    -ms-flex-pack: end;
    justify-content: flex-end;
    min-height: 31.9rem;
    position: relative;
  }

  /* <a> tag body of the card to take the background and make the full card clickable
    Went with that over a clickable div element to match the client structure since it seemed pretty clean */
  .cards.info-card .cards-card-body {
    background-color: var(--info-card-background-color);
    margin: 0;
    position: relative;
    box-sizing: border-box;
    text-decoration: none;
    color: var(--info-card-color);
    cursor: pointer;
    display: flex;
    flex-direction: column;
    -ms-flex-pack: end;
    justify-content: flex-end;
    min-height: 31.9rem;
    padding: 4rem;
  }

  /* Display the pretty gradient on hover on the card */
  .cards.info-card .card-container:hover .cards-card-body {
    background: linear-gradient(140deg, var(--info-card-gradient-background-color-start) 24%, var(--info-card-gradient-background-color-end));
  }

  /* Layout and sizing for the title of the card */
  .cards.info-card .header-container {
    margin-bottom: 2rem;
    -ms-flex-align: end;
    align-items: flex-end;
    display: flex;
  }

/* Font styling for the title of the card */
.cards.info-card .card-title {
  font-size: 2.3rem;
  font-weight: 500;
  letter-spacing: -.12rem;
  line-height: 3.2rem;
  margin-bottom: 2rem;
  color: var(--info-card-color);
  text-decoration: none;
}

  /* Layout and styling of the button in the card */
  .cards.info-card .button.primary {
    background-color: transparent;
    border: 0;
    border-radius: 0;
    padding: 0;
    white-space: normal;
    margin-top:0;
    margin-bottom: 3rem;
    color: var(--info-card-color);
  }

  /* Text styling of the button in the card */
  .cards.info-card .button-container {
    font-size: 1.4rem;
    font-weight: 400;
    letter-spacing: -.02rem;
    line-height: 2rem;
    text-decoration: none;
    text-align: left;
  }

  /* Styling of the arrow icon on the card */
  .cards.info-card .icon-arrow-link {
    font-size: 1.7rem;
    letter-spacing: -.025rem;
    line-height: 2.5rem;
    font-weight: 400;
    -moz-osx-font-smoothing: grayscale;
  }

  /* Styling of the arrow icon and it's animation */
  .cards.info-card .icon-arrow-link::before {
    content: var(--vlt-right-arrow);
    color: var(--info-card-color);
    font-family: var(--icon-font-family);
    font-style: normal;
    font-variant: normal;
    line-height: inherit;
    speak: none;
    text-transform: none;
    transition: padding .3s ease;
  }

/* Animated property change on hover of the arrow icon */
.cards.info-card .card-container:hover .icon-arrow-link::before {
  padding-left: 1.5rem;
}
/* ... */

